# manager_assistant

./: passenger_wsgi.py  pyproject.toml
flask_app/: answer.json  hello.py
flask_app/static/css/: style.css
flask_app/static/image/: attendance.csv  statistics.csv
flask_app/templates/: index.html
tests/: test2.py
zp/: data.json  main.py
zp/data_base/: data_zp.db  db_functions.py
zp/data_files/: attendance.csv  counting_lessons.csv  json_status_students.json  payment_time.csv  statistics.csv  tesat.ipynb  test.ipynb  test.py  zp_excel.xlsx
zp/data_files/.ipynb_checkpoints/: test-checkpoint.ipynb
zp/data_files/Untitled Folder/: attendance.csv  counting_lessons.csv  payment_time.csv  statistics.csv  test.ipynb  test.py  zp_excel.xlsx
zp/diagrams/: __init__.py  analysis_students.py
zp/excel/: excel_loader.py
zp/handlers/: added_group.py  added_student.py  del_group.py  del_student.py  get_data.py  go.py  other.py  output_studets.py  test.ipynb
zp/keyboards/: conf_settings.py  other_kb.py
zp/models/: models_edit_kb.py
zp/statistics/handlers_statistics/: __init__.py  stat_handler.py
zp/statistics/models/: __init__.py  models_data.py
