[tool.poetry]
name = "zp"
version = "0.1.0"
description = ""
authors = ["yunus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
openpyxl = "^3.1.2"
pandas = "^2.0.3"
pip = "^23.2.1"
install = "^1.3.5"
flask = "^2.3.2"
matplotlib = "^3.7.2"
bokeh = "^3.2.1"
xyzservices = "^2023.7.0"
dash-html-components = "0.13.2"
dash-core-components = "0.38.1"
dash-table = "3.1.7"
dash = "0.31.1"
wheel = "^0.41.0"
setuptools = "^68.0.0"
requests = "^2.31.0"
flask-sslify = "^0.1.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
